test_results.log
   Compiling firebase-rust-sdk v0.1.0-alpha.1 (/Users/chanwooahn/Documents/dev/rust/firebase-rust-sdk)
warning: type `QueryState` is more private than the item `Query::query_state`
  --> src/firestore/query.rs:92:5
   |
92 |     fn query_state(&self) -> &QueryState;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method `Query::query_state` is reachable at visibility `pub`
   |
note: but type `QueryState` is only usable at visibility `pub(crate)`
  --> src/firestore/query.rs:51:1
   |
51 | pub(crate) struct QueryState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[warn(private_interfaces)]` on by default

warning: type `QueryState` is more private than the item `Query::with_state`
  --> src/firestore/query.rs:96:5
   |
96 |     fn with_state(&self, state: QueryState) -> Self;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method `Query::with_state` is reachable at visibility `pub`
   |
note: but type `QueryState` is only usable at visibility `pub(crate)`
  --> src/firestore/query.rs:51:1
   |
51 | pub(crate) struct QueryState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: type `QueryState` is more private than the item `<CollectionReference as Query>::query_state`
  --> src/firestore/collection_reference.rs:79:5
   |
79 |     fn query_state(&self) -> &QueryState {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method `<CollectionReference as Query>::query_state` is reachable at visibility `pub`
   |
note: but type `QueryState` is only usable at visibility `pub(crate)`
  --> src/firestore/query.rs:51:1
   |
51 | pub(crate) struct QueryState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: type `QueryState` is more private than the item `<CollectionReference as Query>::with_state`
  --> src/firestore/collection_reference.rs:83:5
   |
83 |     fn with_state(&self, state: QueryState) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method `<CollectionReference as Query>::with_state` is reachable at visibility `pub`
   |
note: but type `QueryState` is only usable at visibility `pub(crate)`
  --> src/firestore/query.rs:51:1
   |
51 | pub(crate) struct QueryState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: type `QueryState` is more private than the item `listen_query`
   --> src/firestore/listener.rs:377:1
    |
377 | / pub async fn listen_query(
378 | |     firestore: &Firestore,
379 | |     auth_token: String,
380 | |     project_id: String,
...   |
383 | |     options: ListenerOptions,
384 | | ) -> Result<QuerySnapshotStream, FirebaseError> {
    | |_______________________________________________^ function `listen_query` is reachable at visibility `pub`
    |
note: but type `QueryState` is only usable at visibility `pub(crate)`
   --> src/firestore/query.rs:51:1
    |
 51 | pub(crate) struct QueryState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: method `get_auth_token` is never used
   --> src/app.rs:158:25
    |
 55 | impl App {
    | -------- method in this implementation
...
158 |     pub(crate) async fn get_auth_token(&self, force_refresh: bool) -> Option<String> {
    |                         ^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: method `grpc_client` is never used
   --> src/firestore/firestore.rs:250:19
    |
 71 | impl Firestore {
    | -------------- method in this implementation
...
250 |     pub(crate) fn grpc_client(&self) -> &GrpcClient<tonic::service::interceptor::InterceptedService<Channel, FirestoreInterceptor>> {
    |                   ^^^^^^^^^^^

warning: fields `path` and `data` are never read
  --> src/firestore/transaction.rs:68:9
   |
67 |     Set {
   |     --- fields in this variant
68 |         path: String,
   |         ^^^^
69 |         data: MapValue,
   |         ^^^^
   |
   = note: `TransactionWrite` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

warning: fields `path` and `data` are never read
  --> src/firestore/transaction.rs:72:9
   |
71 |     Update {
   |     ------ fields in this variant
72 |         path: String,
   |         ^^^^
73 |         data: MapValue,
   |         ^^^^
   |
   = note: `TransactionWrite` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

warning: field `path` is never read
  --> src/firestore/transaction.rs:76:9
   |
75 |     Delete {
   |     ------ field in this variant
76 |         path: String,
   |         ^^^^
   |
   = note: `TransactionWrite` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

warning: missing documentation for a module
  --> src/firestore/mod.rs:28:1
   |
28 | pub mod metadata_changes;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src/lib.rs:18:9
   |
18 | #![warn(missing_docs)]
   |         ^^^^^^^^^^^^

warning: missing documentation for a module
  --> src/firestore/mod.rs:29:1
   |
29 | pub mod snapshot_stream;
   | ^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a module
  --> src/firestore/mod.rs:32:1
   |
32 | pub mod firestore;
   | ^^^^^^^^^^^^^^^^^

warning: missing documentation for a module
  --> src/firestore/mod.rs:34:1
   |
34 | pub mod transaction;
   | ^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a variant
  --> src/firestore/query.rs:25:5
   |
25 |     Ascending,
   |     ^^^^^^^^^

warning: missing documentation for a variant
  --> src/firestore/query.rs:26:5
   |
26 |     Descending,
   |     ^^^^^^^^^^

warning: missing documentation for a method
   --> src/firestore/write_batch.rs:220:5
    |
220 |     pub fn operations(&self) -> &[WriteOperation] {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: missing documentation for a struct
  --> src/firestore/firestore.rs:30:1
   |
30 | pub struct FirestoreInner {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `firebase-rust-sdk` (lib) generated 18 warnings
error[E0599]: no method named `unwrap` found for opaque type `impl futures::Future<Output = tokio::sync::MutexGuard<'_, Vec<_>>>` in the current scope
   --> tests/firestore_integration.rs:522:50
    |
522 | ...                   updates_clone.lock().unwrap().push(*val);
    |                                            ^^^^^^ method not found in `impl futures::Future<Output = tokio::sync::MutexGuard<'_, Vec<_>>>`

error[E0599]: no method named `unwrap` found for opaque type `impl futures::Future<Output = tokio::sync::MutexGuard<'_, Vec<_>>>` in the current scope
   --> tests/firestore_integration.rs:562:36
    |
562 |     let collected = updates.lock().unwrap();
    |                                    ^^^^^^ method not found in `impl futures::Future<Output = tokio::sync::MutexGuard<'_, Vec<_>>>`

error[E0599]: no method named `unwrap` found for opaque type `impl futures::Future<Output = tokio::sync::MutexGuard<'_, bool>>` in the current scope
    --> tests/firestore_integration.rs:1032:41
     |
1032 |                     *delete_flag.lock().unwrap() = true;
     |                                         ^^^^^^ method not found in `impl futures::Future<Output = tokio::sync::MutexGuard<'_, bool>>`

error[E0599]: no method named `unwrap` found for opaque type `impl futures::Future<Output = tokio::sync::MutexGuard<'_, bool>>` in the current scope
    --> tests/firestore_integration.rs:1054:46
     |
1054 |     let got_delete = *received_delete.lock().unwrap();
     |                                              ^^^^^^ method not found in `impl futures::Future<Output = tokio::sync::MutexGuard<'_, bool>>`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `firebase-rust-sdk` (test "firestore_integration") due to 4 previous errors
